# rusty

./: .gitignore  Cargo.toml
crates/parsing/: Cargo.toml
crates/symbology/: Cargo.toml
crates/symbology/benches/: benchmark.rs
crates/symbology/src/: blpapi.rs  figi.rs  figi_imperative.rs  ibrk_figi.rs  lib.rs  scratch.rs
